# aws-lambda-layer-dev

./: .env  .gitignore  pyproject.toml
layers/: download_layers.py  layers.json
layers/layer_b/python/mylib_a/: util.py
tests/: conftest.py  test_util.py
